[gd_scene load_steps=6 format=3 uid="uid://cuf3t5dl0byah"]

[ext_resource type="Script" path="res://scenes/screens/play_screen/play_screen.gd" id="1_eg7w1"]
[ext_resource type="FontFile" uid="uid://c57ehop5l3rba" path="res://common_assets/fonts/JetBrainsMono-Regular.ttf" id="1_hmsmr"]
[ext_resource type="PackedScene" uid="uid://dodrwf7pt5lxk" path="res://scenes/player/player.tscn" id="2_t3hke"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5k3r8"]
size = Vector2(2000, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlf3k"]
size = Vector2(80, 1300)

[node name="PlayScreen" type="Node2D"]
script = ExtResource("1_eg7w1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 900.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.592157, 0.737255, 0.384314, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PlayerOneScore" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_hmsmr")
theme_override_font_sizes/font_size = 50
text = "Player1: 0"

[node name="PlayerTwoScore" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_hmsmr")
theme_override_font_sizes/font_size = 50
text = "Player2: 0"

[node name="Player1" parent="." instance=ExtResource("2_t3hke")]
position = Vector2(100, 500)

[node name="Player2" parent="." instance=ExtResource("2_t3hke")]
position = Vector2(1500, 700)
player_number = 2

[node name="Borders" type="Node2D" parent="."]

[node name="Bottom" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Bottom"]
position = Vector2(800, 940)
shape = SubResource("RectangleShape2D_5k3r8")

[node name="Left" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Left"]
position = Vector2(-40, 300)
shape = SubResource("RectangleShape2D_nlf3k")

[node name="Right" type="StaticBody2D" parent="Borders"]
position = Vector2(1680, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Right"]
position = Vector2(-40, 300)
shape = SubResource("RectangleShape2D_nlf3k")

[node name="DropSpawnTimer" type="Timer" parent="."]
autostart = true
